--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,11 +1,25 @@
-<h3>My Todos</h3>
-<form (submit)= "addTodo()">
-  <input type="text" [(ngModel)] = "text" name ="todo">
-</form>
+<div *ngIf="!isEditable()">
+  <h3>Add Todos</h3>
+  <form (submit)="addTodo()">
+    <input type="text" [(ngModel)]="tempText" name="todo">
+  </form>
+  <button value="Delete All" (click)="deleteAll()">deleteAll</button>
+</div>
+
+
+<div *ngIf="isEditable()">
+    <h3>Edit Todos </h3>
+    <span (click)="disableEditMode()">Switch to Add mode</span>
+  <form (submit)="updateTodo()">
+    <input type="text" [(ngModel)]="tempText" name="todo">
+  </form>
+  <button value="Delete All" (click)="deleteAll()">deleteAll</button>
+</div>
 
 <ul>
-<li *ngFor = 'let todo of todos'>
-{{todo.text}} <input type="button" name ="delete" value="delete" (click)="deleteTodo(todo.text)"/>
-</li>
+  <li *ngFor='let todo of todos'>
+    <span (click)="enableEditMode(todo)">{{todo.text}}</span>
+    <input type="button" name="delete" value="X" (click)="deleteTodo(todo.text)" />
+  </li>
 
 </ul>
