--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,12 +28,12 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+      <input class="form-control mr-sm-2"   [(ngModel)]="searchText" name="searchText"type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 </nav>
 
 <div class="container">
-    <app-todos>Loading Todos...</app-todos>
+    <app-todos [todoSearch]="searchText" >Loading Todos...</app-todos>
 </div>
