--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -4,7 +4,8 @@
       <h5>Edit Todos</h5>
       <span (click)="disableEditMode()" class="btn btn-info">Switch To Add</span>
       <form>
-
+          <input (click)="updateTodo()" class="btn btn-info btn-md" type="submit" name="submit" value="Update">
+          
         <div class="form-group">
           <label for="taskName">Task Name</label>
           <input id="taskName" class="form-control " type="text" [(ngModel)]="todo.task.name" name="taskName">
@@ -34,7 +35,6 @@
           <label for="comments">Comments</label>
           <input id="comments" class="form-control " type="text" [(ngModel)]="todo.task.comments" name="comments">
         </div>
-        <input (click)="updateTodo()" class="btn" type="submit" name="submit" value="Save">
       </form>
 
     </div>
@@ -46,7 +46,8 @@
     <div *ngIf="!isEditable()">
       <h5>Add Todos</h5>
       <form>
-
+          <input (click)="addTodo()" class="btn btn-info btn-md" type="submit" name="submit" value="Add">
+          
         <div class="form-group">
           <label for="taskName">Task Name</label>
           <input id="taskName" class="form-control " type="text" [(ngModel)]="todo.task.name" name="taskName" aria-describedby="taskNameHelp">
@@ -76,33 +77,32 @@
           <label for="comments">Comments</label>
           <input id="comments" class="form-control " type="text" [(ngModel)]="todo.task.comments" name="comments" aria-describedby="commentsHelp">
         </div>
-        <input (click)="addTodo()" class="btn" type="submit" name="submit" value="Add">
-      </form>
+       </form>
 
     </div>
   </div>
 
   <div class="col-md-8 clear">
-    <div class="row">
-      <form class="form-inline">
-        <input class="form-control" type="text" [(ngModel)]="tempText"  name="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
     <button class="btn btn-info" value="Delete All" (click)="refresh()">refresh</button>
     <button class="btn btn-danger" *ngIf="isNotEmpty()" value="Delete All" (click)="deleteAll()">deleteAll</button>
 
-
-    <div (click)="enableEditMode(todo)" *ngFor='let todo of todosList |  searchPipe:tempText' class=" row list-group-item">
-      <span class="col-sm-11">{{todo.task.name}}</span>
-      <span class="col-sm-11">{{todo.task.description}}</span>
-      <span class="col-sm-11">{{todo.task.creationDate| date :'dd/MM/yyyy hh:mm:ss a' }}</span>
-      <span class="col-sm-11">{{todo.task.targetDate | date :'dd/MM/yyyy hh:mm:ss a' }}</span>
-      <!-- <span class="col-sm-11">{{todo.task.status}}</span> -->
-      <span class="col-sm-11">{{todo.creator}}</span>
-      <span class="col-sm-11">{{todo.assignee}}</span>
-      <span class="col-sm-11">{{todo.task.comments}}</span>
-      <input class=" col-sm-1 btn btn-danger btn-sm" type="button" name="delete" value="X" (click)="deleteTodo(todo)" />
+    <span ([ngModel])="todoSearch">You Haven't searched anything!</span>
+    <div *ngFor='let todo of todosList |  searchPipe:todoSearch' class=" row list-group-item">
+      <div class="col-lg-12">
+        <input class=" col-sm-1 btn btn-danger btn-sm" type="button" name="delete" value="X" (click)="deleteTodo(todo)" />
+        <input class=" col-sm-1 btn btn-success btn-sm" type="button" name="delete" value="Done" (click)="done(todo)" />
+        
+      </div>
+      <div (click)="enableEditMode(todo)"  class="col-md-12"  [ngStyle]="{ 'color': '#fff','background-color': isDone(todo)?'#5cb85c':'#5bc0de' }">
+        <span class="col-sm-11">{{todo.task.name}}</span>
+        <span class="col-sm-11">{{todo.task.description}}</span>
+        <span class="col-sm-11">{{todo.task.creationDate| date :'dd/MM/yyyy hh:mm:ss a' }}</span>
+        <span class="col-sm-11">{{todo.task.targetDate | date :'dd/MM/yyyy hh:mm:ss a' }}</span>
+        <!-- <span class="col-sm-11">{{todo.task.status}}</span> -->
+        <span class="col-sm-11">{{todo.creator}}</span>
+        <span class="col-sm-11">{{todo.assignee}}</span>
+        <span class="col-sm-11">{{todo.task.comments}}</span>
+      </div>
     </div>
   </div>
 
